# morphocut

./: .coveragerc  .env  .gitattributes  .gitignore  .pylintrc  .readthedocs.yml  .travis.yml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.md  LICENSE.md  MANIFEST.in  README.md  README.rst  codecov.yml  environment.yaml  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: pull_request_template.md
.github/workflows/: main.yml  rtd-preview.yaml
doc/: api.rst  conf.py  contributing.rst  index.rst  input_formats.rst  output_formats.rst  quickstart.rst
docs/: api.rst  batch.rst  compatibility.rst  conf.py  contrib.rst  contributing.rst  core.rst  examples.rst  file.rst  filters.rst  formats.rst  hdf5.rst  image.rst  index.rst  installation.rst  integration.rst  introduction.rst  mjpeg_streamer.rst  parallel.rst  pipelines.rst  profiling.rst  quickstart.rst  scalebar.rst  stat.rst  stitch.rst  str.rst  stream.rst  torch.rst  utils.rst  why-not-xy.rst
docs/_static/: custom.css
examples/: ecotaxa.py  flowcam.py  introduction.py  quickstart.py  quickstart_trad.py  simple.py  video.py
experiments/: NDProxy.py  cif.py  isiis.py  isiis_edge.ipynb  pims.ipynb  process_kosmos.py  process_kosmos_graph.py  pyrocystis.py  stream_serializer.py
morphocut/: __init__.py  _optional.py  _version.py  configurator.py  core.py  decorator_plugin.py  ecotaxa.py  file.py  functional.py  image.py  io.py  pandas.py  parallel.py  pims.py  plot.py  str.py  stream.py  torch.py  zooprocess.py
morphocut/contrib/: ecotaxa.py
morphocut/graph/: __init__.py  core.py  node.py  pipeline.py  port.py  registry.py  scheduler.py
morphocut/io/: __init__.py  loadable_array.py
morphocut/pipeline/: __init__.py  annotation.py  base.py  color.py  database_persistor.py  dataloader.py  debug.py  exporter.py  extra.py  extract_regions.py  importer.py  object_scale.py  pipeline.py  processor.py  progress.py  threshold_otsu.py  vignette_corrector.py
morphocut/processing/: functional.py
src/morphocut/: __init__.py  _optional.py  _version.py  annotation.py  batch.py  (+25 more)
tests/: conftest.py  helpers.py  test_annotation.py  test_batch.py  test_color.py  test_configurator.py  test_core.py  test_encore.py  test_file.py  test_filters.py  test_graphviz.py  test_hdf5.py  test_image.py  test_io.py  test_mjpeg_streamer.py  test_optional.py  test_pandas.py  test_parallel.py  test_parse.py  test_pipelines.py  test_profile.py  test_profiler.py  test_scalebar.py  test_stat.py  test_stitch.py  test_str.py  test_stream.py  test_stream_estimator.py  test_tiles.py  test_torch.py  test_utils.py  test_vignetting.py  test_zooprocess.py
(+44 files in other folders)
